<resources>
    <string name="app_name">Demo</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_section1">活動量</string>
    <string name="title_section2">睡眠</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="help">ヘルプ</string>
    <string name="evaluation">評価</string>
    <string name="choice">選択</string>
    <string name="day_time">日時時間</string>


    <string name="Question1">今日の睡眠はどうでしたか？</string>
    <string name="Next">進む</string>
    <string name="Undo">戻る</string>
    <string name="title">行動メモ</string>
    <string name="q1">すっきり起きられましたか</string>
    <string name="q2">就寝前3時間以内に食事を取りましたか</string>
    <string name="q3">就寝前3時間以内に入浴しましたか</string>
    <string name="q4">就寝前3時間以内に運動しましたか</string>
    <string name="q5">就寝前1時間以内にカフェイン飲料を飲みましたか</string>
    <string name="q6">就寝前2時間以内にPC,スマートフォンを見ましたか</string>
    <string name="q7">就寝前3時間前以内に飲酒をしましたか</string>
    <string name="q8">就寝前1時間以内に喫煙をしましたか</string>
    <string name="q9">寝るときは暗い環境で寝ましたか</string>
    <string name="Finish">完了</string>
    <string name="time">6:00 ~ 23:00</string>
    <string name="mame">豆</string>
    <string name="title_activity_detail">Detail</string>
</resources>
